--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/resources/img/fav-icon.png" type="" sizes="16x16">
     <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" type="text/css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PKJE9LVB35');
+    </script>
 </head>
 <div class="load-container">
     <div class="loading-screen"></div>
@@ -1195,21 +1205,23 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
+                                                class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
+                                            <a href="https://www.instagram.com/enigmadigital/" target="_blank"
+                                                class="face"><span>
                                                     <lottie-player class="so" src="Instagram-logo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/in-enigmadigital"
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
                                                 class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
@@ -1218,14 +1230,16 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
+                                                class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.behance.net/enigma-digital" class="face"><span>
+                                            <a href="https://www.behance.net/enigma-digital" target="_blank"
+                                                class="face"><span>
                                                     <lottie-player class="so" src="behance.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
