--- a/technology-development.html
+++ b/technology-development.html
@@ -12,6 +12,15 @@
     <link rel="icon" href="./assets/resources/img/fav-icon.png" type="" sizes="16x16">
     <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" type="text/css" rel="stylesheet">
     <link href="/assets/resources/styles/css/st.css" type="text/css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-PKJE9LVB35');
+	</script>
 </head>
 <div class="load-container">
     <div class="loading-screen"></div>
@@ -542,21 +551,24 @@
                                 <div class="botom">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/in.enigmadigital" class="insta"><span>
+                                            <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
+                                                class="insta"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.instagram.com/enigmadigital/" class="face"><span>
+                                            <a href="https://www.instagram.com/enigmadigital/" target="_blank"
+                                                class="face"><span>
                                                     <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/in-enigmadigital" class="lin"><span>
+                                            <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
+                                                class="lin"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -564,8 +576,17 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
+                                                class="twit"><span>
                                                     <lottie-player class="so" src="twitter.json"
+                                                        background="transparent" speed="1"
+                                                        style="width: 20px; height: 20px;" hover></lottie-player>
+                                                </span></a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.behance.net/enigma-digital" target="_blank"
+                                                class="face"><span>
+                                                    <lottie-player class="so" src="behance-w.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -584,14 +605,14 @@
         </div>
 
     </main>
-    
-     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-      <a href="contact.html">
-         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-            style="transform: translate(0px, 0px);">
-      </a>
-   </div>
+
+    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+        <a href="contact.html">
+            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+                style="transform: translate(0px, 0px);">
+        </a>
+    </div>
 
 
 
