--- a/patronum.html
+++ b/patronum.html
@@ -12,14 +12,14 @@
     <link rel="icon" href="./assets/resources/img/fav-icon.png" type="" sizes="16x16">
     <link href="/assets/resources/styles/css/st.css" type="text/css" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-		gtag('config', 'G-PKJE9LVB35');
-	</script>
+        gtag('config', 'G-PKJE9LVB35');
+    </script>
 </head>
 
 <body data-barba="wrapper">
@@ -252,27 +252,34 @@
                 </nav>
                 <div class="nav-second">
                     <div class="Menu-socials">
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.facebook.com/weareenigma/" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Facebook</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.instagram.com/enigmadigital/?hl=en" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Instagram</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.linkedin.com/company/enigma-digital-in/mycompany/" target="_blank"
                                 rel="noopener" class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Linkedin</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
-                            <a href="" target="_blank" rel="noopener" class="Menu-socialsItemLink">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Twitter</span>
+                            </a>
+                        </div>
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
+                                <span class="Menu-socialsItemLabel">behance</span>
                             </a>
                         </div>
                     </div>
@@ -334,8 +341,9 @@
                                     </ul>
                                 </div>
                                 <div>
-                                    <div class="text_anim spline_p">
-                                        <p>Patronum is a swiss army knife for Google Workspace™ administrators. It saves
+                                    <div>
+                                        <p class="text_anim spline_p">Patronum is a swiss army knife for Google
+                                            Workspace™ administrators. It saves
                                             time by automating repetitive and monotonous tasks like Email Signature
                                             Management, Contact Sharing, Drive Management and much more. Patronum
                                             transform the way Google Workspace™ capabilities are managed.
@@ -353,7 +361,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="number_year">
+                        <div id="number_year o-image" data-scroll="">
                             <figure>
                                 <img data-scroll data-scroll-speed="2" alt="logo"
                                     src="assets/resources/img/patronum/patronum-logo.png">
@@ -467,7 +475,7 @@
                     <div>
                         <h2 data-scroll-target="#colori" data-scroll data-scroll-speed="2">
                             <span>
-                                Colors Palette </span>
+                                Colours Palette </span>
                         </h2>
                         <ul data-scroll style="grid-template-columns: 33% 27% 20% 15%">
                             <li>
@@ -604,7 +612,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -627,10 +635,10 @@
                             </div>
                             <div class="footer-left">
                                 <div class="botom">
-                                   <ul>
+                                    <ul>
                                         <li>
                                             <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
-                                                class="insta"><span>
+                                                class="insta" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
@@ -638,15 +646,15 @@
                                         </li>
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
-                                                class="face"><span>
-                                                    <lottie-player class="so" src="Instagramlogo.json"
+                                                class="face" data-cursor="-opaque"><span>
+                                                    <lottie-player class="so" src="Instagram-logo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
                                             <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
-                                                class="lin"><span>
+                                                class="lin" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -654,8 +662,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
-                                                class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" class="twit"
+                                                data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -663,8 +671,8 @@
                                         </li>
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
-                                                class="face"><span>
-                                                    <lottie-player class="so" src="behance-w.json"
+                                                class="face" data-cursor="-opaque"><span>
+                                                    <lottie-player class="so" src="behance.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -683,14 +691,14 @@
         </div>
 
     </main>
-    
-     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
-      <a href="contact.html">
-         <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
-         <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
-            style="transform: translate(0px, 0px);">
-      </a>
-   </div>
+
+    <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
+        <a href="contact.html">
+            <img class="pll" src="./assets/resources/img/play-reel-01.svg" alt="play reel circular text">
+            <img class="inner" src="./assets/resources/img/arrow-circle-line.svg" alt="play icon"
+                style="transform: translate(0px, 0px);">
+        </a>
+    </div>
 
 
 
