--- a/services.html
+++ b/services.html
@@ -256,27 +256,34 @@
                 </nav>
                 <div class="nav-second">
                     <div class="Menu-socials">
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.facebook.com/weareenigma/" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Facebook</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.instagram.com/enigmadigital/?hl=en" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Instagram</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.linkedin.com/company/enigma-digital-in/mycompany/" target="_blank"
                                 rel="noopener" class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Linkedin</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
-                            <a href="" target="_blank" rel="noopener" class="Menu-socialsItemLink">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Twitter</span>
+                            </a>
+                        </div>
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
+                                <span class="Menu-socialsItemLabel">behance</span>
                             </a>
                         </div>
                     </div>
@@ -357,7 +364,8 @@
                                     <span>
                                         <div class="en-form-submit">
                                             <a href="strategy.html" class="en-btn en-btn_send" data-magnetic
-                                                data-cursor="-opaque"><span data-text="Read More">Read
+                                                data-cursor="-opaque"><span data-text="Know
+                                                More">Know
                                                     More</span></a>
                                         </div>
                                     </span>
@@ -391,7 +399,9 @@
                                     <span>
                                         <div class="en-form-submit"><a href="interface-design.html"
                                                 class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
-                                                    data-text="Read More">Read More</span></a>
+                                                    data-text="Know
+                                                    More">Know
+                                                    More</span></a>
                                         </div>
                                     </span>
                                 </div>
@@ -416,7 +426,8 @@
                                     <span>
                                         <div class="en-form-submit">
                                             <a href="technology-development.html" class="en-btn en-btn_send"
-                                                data-magnetic data-cursor="-opaque"><span data-text="Read More">Read
+                                                data-magnetic data-cursor="-opaque"><span data-text="Know
+                                                More">Know
                                                     More</span></a>
                                         </div>
                                     </span>
@@ -450,7 +461,9 @@
                                     <span>
                                         <div class="en-form-submit"><a href="digital-marketing.html"
                                                 class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
-                                                    data-text="Read More">Read More</span></a>
+                                                    data-text="Know
+                                                    More">Know
+                                                    More</span></a>
                                         </div>
                                     </span>
                                 </div>
@@ -605,7 +618,7 @@
                                     <ul>
                                         <li>
                                             <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
-                                                class="insta"><span>
+                                                class="insta" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
@@ -613,7 +626,7 @@
                                         </li>
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
-                                                class="face"><span>
+                                                class="face" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -621,7 +634,7 @@
                                         </li>
                                         <li>
                                             <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
-                                                class="lin"><span>
+                                                class="lin" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -629,8 +642,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
-                                                class="twit"><span>
+                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" class="twit"
+                                                data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -638,7 +651,7 @@
                                         </li>
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
-                                                class="face"><span>
+                                                class="face" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="behance-w.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
