--- a/works.html
+++ b/works.html
@@ -258,27 +258,34 @@
                 </nav>
                 <div class="nav-second">
                     <div class="Menu-socials">
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.facebook.com/weareenigma/" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Facebook</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.instagram.com/enigmadigital/?hl=en" target="_blank" rel="noopener"
                                 class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Instagram</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
                             <a href="https://www.linkedin.com/company/enigma-digital-in/mycompany/" target="_blank"
                                 rel="noopener" class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Linkedin</span>
                             </a>
                         </div>
-                        <div class="Menu-socialsItem">
-                            <a href="" target="_blank" rel="noopener" class="Menu-socialsItemLink">
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
                                 <span class="Menu-socialsItemLabel">Twitter</span>
+                            </a>
+                        </div>
+                        <div class="Menu-socialsItem" data-cursor="-opaque">
+                            <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
+                                class="Menu-socialsItemLink">
+                                <span class="Menu-socialsItemLabel">behance</span>
                             </a>
                         </div>
                     </div>
@@ -546,7 +553,7 @@
                                     <ul>
                                         <li>
                                             <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
-                                                class="insta"><span>
+                                                class="insta" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="facebook.json"
                                                         background="transparent" speed="1"
                                                         style="width: 15px; height: 20px;" hover></lottie-player>
@@ -554,15 +561,15 @@
                                         </li>
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
-                                                class="face"><span>
-                                                    <lottie-player class="so" src="Instagramlogo.json"
+                                                class="face" data-cursor="-opaque"><span>
+                                                    <lottie-player class="so" src="Instagram-logo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
                                         </li>
                                         <li>
                                             <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
-                                                class="lin"><span>
+                                                class="lin" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="linkedin.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -571,7 +578,7 @@
                                         </li>
                                         <li>
                                             <a href="https://twitter.com/_EnigmaDigital" target="_blank"
-                                                class="twit"><span>
+                                                class="twit" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="twitter.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
@@ -579,7 +586,7 @@
                                         </li>
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
-                                                class="face"><span>
+                                                class="face" data-cursor="-opaque"><span>
                                                     <lottie-player class="so" src="behance.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
